# ai-research-assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
config/: defaults.yaml  mcp-minimal.json  settings.yaml
docs/: Content Pipeline - Build Specification.md
docs/plans/: 2026-01-25-content-pipeline.md  2026-02-14-logging-improvements-design.md
exports/: feeds.opml
openspec/changes/archive/2026-02-10-merge-and-generalize/: design.md  tasks.md
openspec/changes/archive/2026-02-10-pipeline-lock-file/: tasks.md  (+1 more)
openspec/changes/merge-and-generalize/: proposal.md
openspec/changes/pipeline-lock-file/: design.md
openspec/specs/cross-platform-scheduling/: spec.md
openspec/specs/permanent-failure-detection/: spec.md
openspec/specs/pipeline-lock/: spec.md
openspec/specs/setup-wizard/: spec.md
scripts/: install.sh  run.sh  uninstall.sh
skills/_templates/article/: SKILL.md  article-workflow.md
skills/_templates/evaluate-knowledge/: SKILL.md
skills/_templates/podcast/: SKILL.md  podcast-workflow.md
skills/_templates/youtube/: SKILL.md  youtube-workflow.md
skills/article/: SKILL.md  article-workflow.md
src/: config.py  database.py  feed_manager.py  main.py  pipeline.py  setup.py  skill_runner.py
templates/: com.claude.ai-research-assistant.plist  com.claude.ai-research-assistant.plist.j2  crontab-entry.j2  interest-profile.md  mcp-minimal.json.j2  run.sh.j2
tests/: __init__.py  test_config.py  test_database.py  test_feed_manager.py  test_pipeline_lock.py  test_setup.py  test_skill_runner.py
(+11 files in other folders)
